# covscript-gmssl

./: .gitignore  .gitmodules  CMakeLists.txt  CNI_API.md  LICENSE  README.md  decrypt.csc  ecdh.csc  encrypt.csc  file_delivery_cilent.csc  file_delivery_client.csc  file_delivery_keygen.csc  file_delivery_server.csc  gmssl.cpp  gmssl.csp  gmssl.hpp  gmssl_impl.cpp  passcode.ecs  simple_tls.csp  sm2_decrypt.csc  sm2_encrypt.csc  sm4_cbc_mac.csc  sm4_decrypt.csc  sm4_encrypt.csc  test.cpp  test.csc  tls_server.ecs  zuc_encrypt.csc
.github/workflows/: ci.yml
csbuild/: gmssl.json  gmssl_impl.json  make.bat  make.sh
tests/: test_error.csc  test_sm2.csc  test_sm3.csc  test_sm4.csc  test_util.csc  test_zuc.csc
